--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-compound-slider": "^3.4.0",
     "react-dom": "18.1.0",
     "react-instantsearch-hooks-web": "6.42.0",
-    "typesense-instantsearch-adapter": "^2.7.0"
+    "typesense-instantsearch-adapter": "^2.7.1-0"
   },
   "devDependencies": {
     "@types/react": "18.0.15",
